# awtctl

./: README.md  pyproject.toml
src/awtctl/: __init__.py  _client.py  client.py  main.py  sdk.py
src/awtctl/apps/: cpu.py  fitness.py  habit.py  pomodoro.py  weather.py
src/awtctl/commands/: app.py  config.py  device.py  notify.py  run.py  screen.py  stats.py
