[project]
name = "awtctl"
version = "0.1.0"
description = "CLI and Python SDK for AWTRIX 3 LED matrix devices"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/happyslowly/awtctl"

[project.scripts]
awtctl = "awtctl.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/awtctl"]
